--- a/aV_11.html
+++ b/aV_11.html
@@ -29,7 +29,7 @@
 
 
 	<ul class="menu_principal">
-		<li class="dropdown"> <a href="Index.html">inicio</a> 
+		<li class="dropdown"> <a href="index.html">inicio</a> 
 		</li>
 
 		<li class="dropdown"> <a href="#">Romance</a> 
@@ -618,3 +618,4 @@
 </body>
 
 </html>
+
