--- a/dr7.html
+++ b/dr7.html
@@ -29,7 +29,7 @@ q<!DOCTYPE html>
 
 
 	<ul class="menu_principal">
-		<li class="dropdown"> <a href="Index.html">Inicio</a> 
+		<li class="dropdown"> <a href="index.html">Inicio</a> 
 		</li>
 
 		<li class="dropdown"> <a href="#">Romance</a> 
@@ -615,4 +615,5 @@ q<!DOCTYPE html>
 </footer>
 
 </body>
+
 </html>
