--- a/realizado2.html
+++ b/realizado2.html
@@ -29,7 +29,7 @@
 
 
 	<ul class="menu_principal">
-		<li class="dropdown"> <a href="Index.html">Inicio</a> 
+		<li class="dropdown"> <a href="index.html">Inicio</a> 
 		</li>
 
 		<li class="dropdown"> <a href="#">Romance</a> 
@@ -605,4 +605,5 @@
 </footer>
 
 </body>
+
 </html>
