--- a/realizado.html
+++ b/realizado.html
@@ -584,7 +584,7 @@
 <form class="fifi">
 	<p>COMPRA REALIZADA!!<br><br>(❁´◡`❁)</p>
 	<p class="po">LA PELICULA SERA ENVIADA A TU CORREO ELECTRONICO <br><br>SIGUE DISFRUTANDO DE NUESTRAS PELICULAS Y SERVICIOS :)</p>
-	<button><a href="Index.html">Continuar</a></button>
+	<button><a href="index.html">Continuar</a></button>
 </form>
 </center>
 
@@ -607,3 +607,4 @@
 </body>
 
 </html>	
+
